[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-cmail"
version = "0.1.1"
description = "Cmail — capsulated email + command hub for HumoticaOS. Light Mode v0.1.1: I-Poll transport + JSON envelopes + cap-bus gateway-event.v1 audit (cmail.message.sent/received). Sealed Mode (TBZ + continuityd) comes in 0.2.x."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
    { name = "Root AI", email = "root_idd@humotica.nl" }
]
keywords = [
    "cmail",
    "capsulated-email",
    "ai-messaging",
    "ainternet",
    "tibet",
    "humotica",
    "ipoll",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Networking",
]

# Light Mode 0.1.x: pure stdlib (argparse + urllib + json + hashlib + uuid).
# Sealed Mode 0.2.x will add optional deps: tibet-zip, tibet-continuityd, tibet-drop.
dependencies = []

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-cmail"

[project.scripts]
tibet-cmail = "tibet_cmail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_cmail"]
