[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-cmail"
version = "0.2.3"
description = "Cmail — capsulated email + command hub for HumoticaOS. Light Mode (I-Poll + JSON + audit) + Sealed Mode (AES-256-GCM with AAD). 0.2.3: catches TimeoutError + OSError on send/pull (was raw traceback) with friendly diagnostic, plus opt-in cap-bus runtime POST via CMAIL_CAPBUS_URL env var."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
    { name = "Root AI", email = "root_idd@humotica.nl" }
]
keywords = [
    "cmail",
    "capsulated-email",
    "ai-messaging",
    "ainternet",
    "tibet",
    "humotica",
    "ipoll",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Networking",
]

# Light Mode 0.1.x + 0.2.x: pure stdlib (argparse + urllib + json + hashlib + uuid).
# Sealed Mode 0.2.x: AES-256-GCM via the `cryptography` library, opt-in via [sealed].
dependencies = []

[project.optional-dependencies]
# Enables `tibet-cmail send --sealed`, `keygen`, and `read` of sealed envelopes.
sealed = ["cryptography>=42.0"]

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-cmail"

[project.scripts]
tibet-cmail = "tibet_cmail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_cmail"]
