[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tibet-cmail"
version = "0.3.0"
description = "Cmail — capsulated email + command hub for HumoticaOS. Light + Sealed Mode + audit + cap-bus runtime POST. 0.3.0: **autonomous posture-cmail** — `tibet-cmail posture-watch` tails verdict.v1 JSONL stream and emits a cmail to the operator on every posture transition (cold-start / mode change / quarantine / offline). Plus bootstrap-or-die discipline: tibet-core + jis-core now runtime deps."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jasper van de Meent", email = "jasper@humotica.com" },
    { name = "Root AI", email = "root_idd@humotica.nl" }
]
keywords = [
    "cmail",
    "capsulated-email",
    "ai-messaging",
    "ainternet",
    "tibet",
    "humotica",
    "ipoll",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Networking",
]

# Bootstrap-or-die discipline (Jasper 28 mei + 31 mei): every Humotica package
# that we touch declares tibet-core + jis-core as runtime deps so the central
# chain + central identity-store get pulled in transitively. Keeps the stack
# coherent and lets PyPI stats reflect actual pair-bind usage.
dependencies = [
    "tibet-core>=0.5.0b2",
    "jis-core>=0.4.0b1",
]

[project.optional-dependencies]
# Sealed Mode pulls in AES-256-GCM via the `cryptography` library.
sealed = ["cryptography>=42.0"]

[project.urls]
Homepage = "https://humotica.com"
Repository = "https://github.com/Humotica/tibet-cmail"

[project.scripts]
tibet-cmail = "tibet_cmail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tibet_cmail"]
